crates/goat_semantic/tests/integration/snapshots/two_functions.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/two_functions.js
---
bb0: {

}

bb1: {

}

bb2: {

}

bb3: {
	return <value>
}

bb4: {
	unreachable
}

bb5: {

}

bb6: {

}

bb7: {
	return <value>
}

bb8: {
	unreachable
}

bb9: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
return <value>" shape = box]
    4 [ label = "bb4
unreachable" shape = box]
    5 [ label = "bb5" shape = box]
    6 [ label = "bb6" shape = box]
    7 [ label = "bb7
return <value>" shape = box]
    8 [ label = "bb8
unreachable" shape = box]
    9 [ label = "bb9" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 3 [ label="NewFunction"]
    4 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 4 [ label="Unreachable", style="dotted"]
    5 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 5 [ label="Normal"]
    7 -> 6 [ label="Error(Implicit)", color=red, style=dashed]
    5 -> 7 [ label="NewFunction"]
    8 -> 6 [ label="Error(Implicit)", style=dashed, color=red]
    7 -> 8 [ label="Unreachable", style="dotted"]
    9 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    5 -> 9 [ label="Normal"]
}
