crates/goat_semantic/tests/integration/snapshots/while.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/while.js
---
bb0: {

}

bb1: {

}

bb2: {

}

bb3: {
	statement
}

bb4: {
	condition
}

bb5: {
	condition
}

bb6: {

}

bb7: {

}

bb8: {
	statement
	return <value>
}

bb9: {
	unreachable
}

bb10: {
	return <value>
}

bb11: {
	unreachable
}

bb12: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
WhileStatement" shape = box]
    4 [ label = "bb4
Condition(LogicalExpression)" shape = box]
    5 [ label = "bb5
Condition(0)" shape = box]
    6 [ label = "bb6" shape = box]
    7 [ label = "bb7" shape = box]
    8 [ label = "bb8
BlockStatement
return <value>" shape = box]
    9 [ label = "bb9
unreachable" shape = box]
    10 [ label = "bb10
return <value>" shape = box]
    11 [ label = "bb11
unreachable" shape = box]
    12 [ label = "bb12" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 3 [ label="NewFunction"]
    4 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    5 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    6 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    7 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 5 [ label="Normal"]
    5 -> 6 [ label="Normal"]
    5 -> 7 [ label="Normal"]
    6 -> 7 [ label="Normal"]
    8 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    9 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    8 -> 9 [ label="Unreachable", style="dotted"]
    10 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 4 [ label="Normal"]
    4 -> 8 [ label="Jump", color=green]
    9 -> 4 [ label="Backedge", style="dotted", color=grey]
    4 -> 10 [ label="Normal"]
    11 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    10 -> 11 [ label="Unreachable", style="dotted"]
    12 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 12 [ label="Normal"]
}
